refactor: add discounts payload to product response
