# packages/server/docs/swagger.yaml
@@ -2838,6 +2838,60 @@ components:
         - arName
         - id
       type: object
+    DiscountType:
+      type: string
+      enum:
+        - PERCENTAGE
+        - FIXED
+        - BOGO
+        - BULK
+      nullable: false
+    Discount:
+      properties:
+        updatedAt:
+          type: string
+          format: date-time
+        createdAt:
+          type: string
+          format: date-time
+        endDate:
+          type: string
+          format: date-time
+          nullable: true
+        startDate:
+          type: string
+          format: date-time
+          nullable: true
+        isStoreWide:
+          type: boolean
+        isActive:
+          type: boolean
+        minQty:
+          type: integer
+          format: int32
+          nullable: true
+        description:
+          type: string
+          nullable: true
+        amount: {}
+        type:
+          $ref: "#/components/schemas/DiscountType"
+        id:
+          type: integer
+          format: int32
+      required:
+        - updatedAt
+        - createdAt
+        - endDate
+        - startDate
+        - isStoreWide
+        - isActive
+        - minQty
+        - description
+        - amount
+        - type
+        - id
+      type: object
     GetProductResponse:
       allOf:
         - $ref: "#/components/schemas/DefaultResponseBody"
@@ -2846,12 +2900,17 @@ components:
               allOf:
                 - $ref: "#/components/schemas/Product"
                 - properties:
+                    discounts:
+                      items:
+                        $ref: "#/components/schemas/Discount"
+                      type: array
                     category:
                       $ref: "#/components/schemas/Category"
                     avgRating:
                       type: integer
                       format: int32
                   required:
+                    - discounts
                     - category
                     - avgRating
                   type: object
@@ -2871,12 +2930,17 @@ components:
                     allOf:
                       - $ref: "#/components/schemas/Product"
                       - properties:
+                          discounts:
+                            items:
+                              $ref: "#/components/schemas/Discount"
+                            type: array
                           category:
                             $ref: "#/components/schemas/Category"
                           avgRating:
                             type: integer
                             format: int32
                         required:
+                          - discounts
                           - category
                           - avgRating
                         type: object
@@ -3311,60 +3375,6 @@ components:
           required:
             - data
           type: object
-    DiscountType:
-      type: string
-      enum:
-        - PERCENTAGE
-        - FIXED
-        - BOGO
-        - BULK
-      nullable: false
-    Discount:
-      properties:
-        updatedAt:
-          type: string
-          format: date-time
-        createdAt:
-          type: string
-          format: date-time
-        endDate:
-          type: string
-          format: date-time
-          nullable: true
-        startDate:
-          type: string
-          format: date-time
-          nullable: true
-        isStoreWide:
-          type: boolean
-        isActive:
-          type: boolean
-        minQty:
-          type: integer
-          format: int32
-          nullable: true
-        description:
-          type: string
-          nullable: true
-        amount: {}
-        type:
-          $ref: "#/components/schemas/DiscountType"
-        id:
-          type: integer
-          format: int32
-      required:
-        - updatedAt
-        - createdAt
-        - endDate
-        - startDate
-        - isStoreWide
-        - isActive
-        - minQty
-        - description
-        - amount
-        - type
-        - id
-      type: object
     GetDiscountResponse:
       allOf:
         - $ref: "#/components/schemas/DefaultResponseBody"
