# packages/server/src/features/product/product.service.ts
@@ -1,11 +1,14 @@
 import type { Prisma } from '@prisma/client';
 import type {
   CreateProductRequest,
+  CreateProductResponse,
+  DeleteProductResponse,
   GetProductResponse,
   ListProductsRequest,
   ListProductsResponse,
   Product,
   UpdateProductRequest,
+  UpdateProductResponse,
 } from '@resala/shared';
 
 import type { DataStore } from '../../datastore/index.js';
@@ -16,7 +19,7 @@ export class ProductService {
   constructor(
     private readonly db: DataStore,
     private readonly fileService: FileService
-  ) {}
+  ) { }
 
   async get(id: number): Promise<GetProductResponse['data']> {
     const avgRating = await this.db.review.aggregate({
@@ -24,12 +27,34 @@ export class ProductService {
       _avg: { rating: true },
     });
 
-    const product = await this.db.product.findUniqueOrThrow({
-      include: { category: true },
+    const { discountProduct, ...product } = await this.db.product.findUniqueOrThrow({
+      include: {
+        category: true,
+        discountProduct: {
+          include: {
+            discount: true,
+          },
+          where: {
+            discount: {
+              isActive: true,
+              OR: [
+                { startDate: null },
+                { endDate: null },
+                { startDate: { lte: new Date() } },
+                { endDate: { gte: new Date(new Date().toDateString()) } },
+              ],
+            },
+          },
+        },
+      },
       where: { id },
     });
 
-    return { ...product, avgRating: avgRating._avg.rating ?? 0 };
+    return {
+      ...product,
+      avgRating: avgRating._avg.rating ?? 0,
+      discounts: discountProduct.map(dp => dp.discount),
+    };
   }
 
   async list({
@@ -49,7 +74,25 @@ export class ProductService {
     const [total, products] = await this.db.$transaction([
       this.db.product.count({ where: filters }),
       this.db.product.findMany({
-        include: { category: true },
+        include: {
+          category: true,
+          discountProduct: {
+            include: {
+              discount: true,
+            },
+            where: {
+              discount: {
+                isActive: true,
+                OR: [
+                  { startDate: null },
+                  { endDate: null },
+                  { startDate: { lte: new Date() } },
+                  { endDate: { gte: new Date(new Date().toDateString()) } },
+                ],
+              },
+            },
+          },
+        },
         where: filters,
         skip: (page - 1) * limit,
         take: limit,
@@ -65,8 +108,9 @@ export class ProductService {
 
     return {
       pagination: { page, limit, total },
-      products: products.map(product => ({
+      products: products.map(({ discountProduct, ...product }) => ({
         ...product,
+        discounts: discountProduct.map(dp => dp.discount),
         avgRating: avgRatings.find(rating => rating.productId === product.id)?._avg.rating ?? 0,
       })),
     };
@@ -78,7 +122,7 @@ export class ProductService {
     arName,
     file,
     ...payload
-  }: CreateProductRequest['body'] & { file: Express.Multer.File }) {
+  }: CreateProductRequest['body'] & { file: Express.Multer.File }): Promise<CreateProductResponse['data']> {
     await this.db.category.findUniqueOrThrow({ where: { id: categoryId } });
 
     const product = await this.db.product.findFirst({
@@ -103,7 +147,7 @@ export class ProductService {
   async update(
     id: number,
     { file, ...product }: UpdateProductRequest['body'] & { file?: Express.Multer.File }
-  ) {
+  ): Promise<UpdateProductResponse['data']> {
     await this.db.category.findUniqueOrThrow({ where: { id: product.categoryId } });
 
     const { imageKey } = await this.get(id);
@@ -119,7 +163,7 @@ export class ProductService {
     return await this.db.product.update({ where: { id }, data: product });
   }
 
-  async delete(id: number) {
+  async delete(id: number): Promise<DeleteProductResponse['data']> {
     const { imageKey } = await this.get(id);
 
     const product = await this.db.product.delete({ where: { id } });
